--- a/hotel-booking/src/main/resources/application.yaml
+++ b/hotel-booking/src/main/resources/application.yaml
@@ -7,6 +7,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+    show-sql: false
   datasource:
     url: jdbc:postgresql://localhost:6432/hotel_booking
     username: postgres
